2002-10-31  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-gpg-context.c: Renamed stdin to stdin_fd, stdout to
	stdout_fd, and stderr to stderr_fd to be more portable.

2002-10-30  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-filter-html.c (html_convert): Rewrote to use regex for
	url/addr extraction. Outputs more correct html now too.

2002-10-18  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-stream-filter.c (stream_read): Change presize from an int
	to a size_t to fix a 64bit cleanliness bug.
	(stream_write): Same.

2002-10-14  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-gpg-context.c (gpg_ctx_get_argv): Setup the import/export
	command-line.
	(gpg_ctx_op_step): Handle import/export errors.
	(gpg_import_keys): Implemented.
	(gpg_export_keys): Implemented.
	(gpg_ctx_op_step): Don't do anything with gpg's stdin unless we
	have something to write to it (exporting keys doesn't require
	writing to gpg's stdin).

2002-10-13  Jeffrey Stedfast  <fejj@ximian.com>

	* doc/*: Updated.

	* gmime-utils.c (g_mime_utils_generate_message_id): New function
	to generate a valid unique message-id string.

2002-10-08  Jeffrey Stedfast  <fejj@ximian.com>

	Fixes to make g_mime_message_partial_split_message() use the
	correct token as the id parameter.

	* gmime-object.c (g_mime_object_set_content_id): Same as with
	GMimeMessage::message_id.
	(process_header): Same as process_header for gmime-message.c but
	for content_id.

	* gmime-message.c (process_header): Set only the addr-spec portion
	of the msgid.
	(g_mime_message_set_message_id): Treat the message_id passed in as
	the addr-spec msgid (ie, as if it didn't contain <>'s).

2002-10-02  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-gpg-context.c (gpg_import_keys): Renamed.
	(gpg_export_keys): Renamed.

	* gmime-cipher-context.c (g_mime_cipher_export_keys): Renamed to
	be friendlier toward c++.
	(g_mime_cipher_import_keys): Renamed to be similarly named with
	the above function.

2002-09-30  Jeffrey Stedfast  <fejj@ximian.com>
